# populator

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: create_corr_files.py  download_ycs.py  populate_equity_db.py  populate_worldbank_db.py  populate_ycs_db.py  populate_ycs_duckdb.py  populate_ycs_sqlite.py
src/backends/: __init__.py  base.py  duckdb_backend.py  sqlite_backend.py
src/ingestion/: __init__.py  files.py  hamilton_nodes.py  load.py  pipeline.py  transform_registry.py  transforms.py
src/populator_mcp/: __init__.py  server.py
src/ycs/: __init__.py  cli.py  config.py  correlations.py  coverage.py  data_loading.py  hamilton_nodes.py  pipeline.py  workflow.py
tests/: test_ingestion.py  test_transform_registry.py  test_transforms.py  test_ycs_pipeline.py
