[project]
name = "populator"
version = "0.1.0"
description = "Load local CSV, parquet, and feather files into SQLite or DuckDB with optional transforms and MCP support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "dcor>=0.7",
    "dotenv>=0.9.9",
    "duckdb>=1.5.4",
    "fastparquet>=2026.5.0",
    "kagglehub[pandas-datasets]>=1.0.2",
    "numpy>=2.0,<2.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotnine>=0.15.7",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "sf-hamilton>=1.90.0",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
mcp = [
    "fastmcp>=2.0",
]

[project.scripts]
populator-mcp = "populator_mcp.server:main"

[project.urls]
Repository = "https://github.com/FulgentMcGuffin/populator"
Homepage = "https://github.com/FulgentMcGuffin/populator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backends", "src/ingestion", "src/ycs", "src/populator_mcp"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
